...
    // MARK: Properties
    
    private let context: NSManagedObjectContext
    
    // Properties for seeding to Core Data
    private let seedMuscles = ["BICEPS", "TRICEPS", "GLUTES", "CORE", "CHEST", "SHOULDERS", "BACK", "QUADS", "LEGS", "OTHER"]
    private let seedWorkoutStyles = ["NORMAL", "WEIGHTED", "IMPROV"]
    private let seedExerciseStyles = ["NORMAL", "ASSISTED", "WEIGHTED"]
    private let seedMeasurementStyles = ["TIME", "SETS", "WEIGHTED SETS"] // Add countdown
    private let seedSkills = ["MUSCLE UP", "ZWIFT", "HANDSTAND", "DRAGON PULL OVER", "L-SIT", "1H PUSH UP", "OTHER"]
    
    // MARK: - Initializer
    
...
        DatabaseFacade.makeWorkout(withName: "BOOTYBUILDER", workoutStyle: WorkoutStyles.normal, muscles: [Muscles.glutes], skills: [Skill](), exercises: [Exercises.bicepFlex])
        DatabaseFacade.makeWorkout(withName: "HARD CORE", workoutStyle: WorkoutStyles.normal, muscles: [Muscles.core], exercises: [Exercises.pullUp])
        DatabaseFacade.makeWorkout(withName: "MUSCLE UP", workoutStyle: WorkoutStyles.technique, muscles: [Muscles.back], exercises: [Exercises.pullUp])
        
        // Generate weighted workout
        let exercisesForPullDay: [Exercise] = [
            DatabaseFacade.makeExercise(withName: "WEIGHTED PULL UP", exerciseStyle: ExerciseStyles.weighted, muscles: [Muscles.back], skills: [Skill](), measurementStyle: MeasurementStyles.weightedSets),
            DatabaseFacade.makeExercise(withName: "PULL UP", exerciseStyle: ExerciseStyles.explosive, muscles: [Muscles.back], skills: [Skill](), measurementStyle: MeasurementStyles.sets),
            DatabaseFacade.makeExercise(withName: "AUSTRALIAN PULL UP", exerciseStyle: ExerciseStyles.weighted, muscles: [Muscles.back], skills: [Skill](), measurementStyle: MeasurementStyles.sets),
        ]
        DatabaseFacade.makeWorkout(withName: "PULL DAY", workoutStyle: WorkoutStyles.normal, muscles: [Muscles.back], exercises: exercisesForPullDay)
        
        // Goals
        DatabaseFacade.makeGoal("Live your dream")
        DatabaseFacade.makeGoal("Become extreme")
        
        DatabaseFacade.saveContext()
...
