...
        viewControllers = [historyNavigationController, workoutNavigationController, profileNavigationController]
        historyNavigationController.tabBarItem = UITabBarItem(title: "", image: UIImage.historyIcon, tag: 0)
        workoutNavigationController.tabBarItem = UITabBarItem(title: "", image: UIImage.starIcon, tag: 1)
        profileController.tabBarItem = UITabBarItem(title: "", image: UIImage.profileIcon, tag: 2)

        // Accessibility
        workoutNavigationController.tabBarItem.accessibilityIdentifier = "workout-tab"
        historyNavigationController.tabBarItem.accessibilityIdentifier = "history-tab"
        profileController.tabBarItem.accessibilityIdentifier = "profile-tab"

        let tabBarItems = tabBar.items! as [UITabBarItem]
        for item in tabBarItems {
            item.imageInsets = UIEdgeInsets(top: 6, left: 0, bottom: -6, right: 0)
        }

...
